--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -34,11 +34,11 @@ ADD_SUBDIRECTORY(06.2DGraphics)
 ADD_SUBDIRECTORY(07.Collision)
 ADD_SUBDIRECTORY(08.SpecialFX)
 ADD_SUBDIRECTORY(09.Meshviewer)
-ADD_SUBDIRECTORY(10.Shaders)
+#ADD_SUBDIRECTORY(10.Shaders)
 ADD_SUBDIRECTORY(11.PerPixelLighting)
 ADD_SUBDIRECTORY(12.TerrainRendering)
 ADD_SUBDIRECTORY(13.RenderToTexture)
-ADD_SUBDIRECTORY(14.Win32Window)
+#ADD_SUBDIRECTORY(14.Win32Window)
 ADD_SUBDIRECTORY(15.LoadIrrFile)
 ADD_SUBDIRECTORY(16.Quake3MapShader)
 ADD_SUBDIRECTORY(17.HelloWorld_Mobile)
