Make OpenGL build optional

--- a/Irrlicht/RenderEngines/CMakeLists.txt
+++ b/Irrlicht/RenderEngines/CMakeLists.txt
@@ -3,7 +3,7 @@ if (IRR_BUILD_RENDERSYSTEM_GL EQUAL 1)
     add_subdirectory(OpenGL)
 endif(IRR_BUILD_RENDERSYSTEM_GL EQUAL 1)
 
-#set(IRR_BUILD_RENDERSYSTEM_GL 1 CACHE STRING "1" FORCE)
+set(IRR_BUILD_RENDERSYSTEM_GL 0 CACHE STRING "0")
 
 IF (NOT ${CMAKE_CXX_PLATFORM_ID} MATCHES MinGW AND WIN32)
   if (DirectX9_INCLUDE_DIR AND DirectX9_D3DX9_LIBRARY)
