- Fix *nix build I/II part (render engines not working, only after part II) - Enabled CMAKE_CODELITE_USE_TARGETS cmake global settings

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,6 +9,7 @@ message("")
 set_property(GLOBAL PROPERTY USE_FOLDERS ON)
 set_property(GLOBAL PROPERTY PREDEFINED_TARGETS_FOLDER "CMake")
 set( CMAKE_VERBOSE_MAKEFILE on )
+set( CMAKE_CODELITE_USE_TARGETS on )
 
 set(CMAKE_MODULE_PATH
   ${CMAKE_MODULE_PATH}
