--- a/Irrlicht/RenderEngines/Vulkan/CMakeLists.txt
+++ b/Irrlicht/RenderEngines/Vulkan/CMakeLists.txt
@@ -10,6 +10,7 @@ include_directories(
     ${CMAKE_CURRENT_SOURCE_DIR}
     ${Vulkan_INCLUDE_DIRS}
     ${ZLIB_INCLUDE_DIR}
+    ${CMAKE_SOURCE_DIR}
     ${CMAKE_SOURCE_DIR}/dep/include
     ${CMAKE_SOURCE_DIR}/contrib/IrrLicht
     ${CMAKE_SOURCE_DIR}/contrib/IrrLicht/include
@@ -51,9 +52,8 @@ add_dependencies(CVulkan ZLIB)
 #)
 
 if(_IRR_DYNAMIC_)
-    target_link_libraries (CVulkan 
+    target_link_libraries (CVulkan
         Vulkan::Vulkan
-        CFramework
         irrlicht
         ZLIB
         Glslang
