--- a/dep/threads/CMakeLists.txt
+++ b/dep/threads/CMakeLists.txt
@@ -4,3 +4,5 @@ add_library(threads INTERFACE)
 target_link_libraries(threads
   INTERFACE
     ${CMAKE_THREAD_LIBS_INIT})
+
+MESSAGE (${IntSTATUS} "Threads")
