--- a/dep/zlib/CMakeLists.txt
+++ b/dep/zlib/CMakeLists.txt
@@ -37,6 +37,8 @@ include_directories(
 
 CreateLibrary("ZLIB" "${zlib_SRCS}" "STATIC" "" "")
 
+target_include_directories(ZLIB INTERFACE ${CMAKE_CURRENT_SOURCE_DIR})
+
 set_target_properties(ZLIB
     PROPERTIES
       FOLDER
